--- a/css/estiloos.css
+++ b/css/estiloos.css
@@ -7,7 +7,7 @@ body {
 #container
 {
 width: 70%;
-padding: 1em;
+padding: 0;
 text-align: left;
 border: 1px solid #ddd;
 margin: 0 auto;
@@ -16,4 +16,26 @@ margin: 0 auto;
 #contaioner h1
 {
 font-size: 20px;
+}
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
+    color: white; 
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+
+}
+#cabecera #tagline
+{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em ;
+
+}
+#post
+{
+    padding: 1em;
 }
