--- a/css/estiloos.css
+++ b/css/estiloos.css
@@ -2,12 +2,12 @@ body {
     color: #333;
     text-align: center;
     font-size: 16px;
-    font-family: "Arial";
+    font-family: "Courier";
 }
 #container
 {
 width: 70%;
-padding: 1em;
+padding: 0;
 text-align: left;
 border: 1px solid #ddd;
 margin: 0 auto;
@@ -16,4 +16,25 @@ margin: 0 auto;
 #contaioner h1
 {
 font-size: 20px;
+}
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
+    color: white; 
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em ;
+
+}
+#post
+{
+    padding: 1em;
 }
