--- a/css/estiloos.css
+++ b/css/estiloos.css
@@ -2,7 +2,7 @@ body {
     color: #333;
     text-align: center;
     font-size: 16px;
-    font-family: "Courier";
+    font-family: Arial;
 }
 #container
 {
@@ -25,19 +25,12 @@ font-size: 20px;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
-<<<<<<< HEAD
-=======
     font-weight: bold;
->>>>>>> cabecera
 
 }
 #cabecera #tagline
 {
-<<<<<<< HEAD
-    padding: 0 0 0 1em;
-=======
     padding: 1em 0 0 0;
->>>>>>> cabecera
     font-weight: normal;
     font-size: 0.8em ;
 
